<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/buttons_for_true_false_question"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/true_button"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/true_button"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/false_button"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/false_button"
            android:textColor="@color/cardview_light_background" />

    </LinearLayout>

    <Button
        android:id="@+id/next_level_button"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/next_level"
        android:textColor="@color/cardview_light_background"/>

</LinearLayout>